// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth/reinitialiser-mot-de-passe renders page if email 1`] = `
<DocumentFragment>
  <div
    class="container half"
  >
    <button
      class="fr-btn fr-btn--tertiary fr-btn--sm fr-icon-arrow-left-line fr-btn--icon-left"
      id="fr-button-:r3:"
    >
      Retour
    </button>
    <div
      class="title"
    >
      <h1>
        Mot de passe oublié
      </h1>
      <p
        class="subtitle"
      >
        Nous allons vous envoyer un mail avec des instructions pour le réinitialiser.
      </p>
    </div>
    <form
      class="container"
    >
      <div
        class="fr-input-group mb-0"
      >
        <label
          class="fr-label"
          for="input-:r4:"
        >
          Adresse mail
        </label>
        <input
          aria-describedby="input-:r4:-desc-error"
          class="fr-input"
          id="input-:r4:"
          name="email"
          type="email"
          value="test@example.com"
        />
        <div
          aria-live="polite"
          class="fr-messages-group"
          id="input-:r4:-messages-group"
        />
      </div>
      <div
        class="text-end"
      >
        <button
          class="fr-btn fr-icon-mail-line fr-btn--icon-right button full mt"
          id="fr-button-:r5:"
          type="submit"
        >
          Envoyer le lien de réinitialisation
        </button>
      </div>
    </form>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;

exports[`auth/reinitialiser-mot-de-passe renders page if no email 1`] = `
<DocumentFragment>
  <div
    class="container half"
  >
    <button
      class="fr-btn fr-btn--tertiary fr-btn--sm fr-icon-arrow-left-line fr-btn--icon-left"
      id="fr-button-:r0:"
    >
      Retour
    </button>
    <div
      class="title"
    >
      <h1>
        Mot de passe oublié
      </h1>
      <p
        class="subtitle"
      >
        Nous allons vous envoyer un mail avec des instructions pour le réinitialiser.
      </p>
    </div>
    <form
      class="container"
    >
      <div
        class="fr-input-group mb-0"
      >
        <label
          class="fr-label"
          for="input-:r1:"
        >
          Adresse mail
        </label>
        <input
          aria-describedby="input-:r1:-desc-error"
          class="fr-input"
          id="input-:r1:"
          name="email"
          type="email"
          value=""
        />
        <div
          aria-live="polite"
          class="fr-messages-group"
          id="input-:r1:-messages-group"
        />
      </div>
      <div
        class="text-end"
      >
        <button
          class="fr-btn fr-icon-mail-line fr-btn--icon-right button full mt"
          id="fr-button-:r2:"
          type="submit"
        >
          Envoyer le lien de réinitialisation
        </button>
      </div>
    </form>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      tabindex="-1"
    />
  </div>
</DocumentFragment>
`;
